edit calibration layer and post processing such that it uses array list which takes O(1) time